--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           Looking for a stunning, fully responsive website that sets your brand apart? 
           We bring your vision to life with custom web designs that are sleek, modern, and user-friendly. 
           Whether you need a brand-new site or a fresh redesign, we deliver websites that perform flawlessly across all devices. 
-          Plus, our maintenance services keep your site running smoothly and securely, 
-          so you can focus on growing your business while we take care of the tech.
+          Plus, our maintenance services keep your site running smoothly and securely.
           Let’s build something amazing together
         </p>
         <!-- <div class="header__btn">
@@ -56,14 +55,13 @@
       <div class="about__content">
         <h2 class="section__header">I.T Solutions</h2>
         <p class="section__description">
-          we offer innovative IT solutions designed to meet your business needs. <br> 
-          Our services include network structure and cabling for seamless connectivity, 
-          graphic design to enhance your brand and Device maintenance to ensure optimal performance. <br> 
-          We specialize in IT setups, providing end-to-end solutions like network design and equipment installation, 
-          as well as call center setups for efficient customer communication. <br>
-          With IT diagnostics and evaluation, we guide you in upgrading or setting up systems effectively. 
-          Backed by expert support, customized solutions, and affordable pricing, 
-          we simplify your IT needs to help your business thrive. <br>
+          we deliver cutting-edge IT solutions tailored to drive your business forward. <br> 
+          From designing efficient network structures to enhancing your brand with stunning graphic design, <br> 
+          we ensure your technology works for you. Our expertise extends to IT setups, <br>
+          offering full-service solutions such as network design, structure and cabling, equipment installation, 
+          and call center configurations to optimize customer engagement. <br>
+          We also provide expert IT diagnostics and evaluations to help you upgrade or set up your systems with confidence. <br>
+          With personalized solutions, reliable support, and competitive pricing, we make your IT challenges a thing of the past. <br>
           Reach out to get started!
         </p>
         <!-- <div class="about__btn">
@@ -176,17 +174,17 @@
       <h2 class="section__header">Let's Talk!</h2>
       <p class="section__description">
         We craft sleek, user-friendly websites that captivate and deliver results. <br>
-        Our IT solutions keep your business connected, secure, and efficient.
+        Our IT solutions keep your business connected, secure and efficient.
       </p>
       <div class="contact__socials">
-        <a href="#"><i class="ri-whatsapp-line"></i></a>
+        <a href="https://wa.me/254793514006" target="_blank"><i class="ri-whatsapp-line"></i></a>
         <p>+254-793-514-006</p>
-        <a href="#"><i class="ri-smartphone-line"></i> </a>
+        <a href="tel: +254789655404"><i class="ri-smartphone-line"></i></a>
         <p>+254-789-655-404</p>
       </div>
     </section>
     <footer class="footer">
-      Copyright © 2023 S.S Solutions. All rights reserved.
+      Copyright <span>©</span> 2023 <span>S.S Solutions</span>. All rights reserved.
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
