--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h4>Network Infrustructure</h4>
           <p>
             Designing and managing secure, scalable networks, 
-            ensuring seamless connectivity, optimized performance, and reliable infrastructure for businesses of all sizes.
+            ensuring seamless connectivity, optimized performance and reliable infrastructure for businesses of all sizes.
           </p>
         </div>
       </div>
@@ -128,7 +128,7 @@
       <h2 class="section__header">Portfolio</h2>
       <p class="section__description">
         Explore a showcase of my diverse projects, demonstrating my skills in
-        web development, design, and more.
+        web development, design and more.
       </p>
       <div class="portfolio__grid">
         <div class="portfolio__card">
